fix: horizontal scroll showing

--- a/apps/web/styles/globals.css
+++ b/apps/web/styles/globals.css
@@ -27,6 +27,7 @@
 
 html {
 	overflow-y: scroll;
+	overflow-x: hidden;
 	color: #fff;
 }
 
